2002-02-12  Sam Steingold  <sds@gnu.org>

	* package.d (%SET-PACKAGE-LOCK): call test_package_arg() on the
	single arg

2002-02-11  Sam Steingold  <sds@gnu.org>

	* stream.d (strip_white): strip only the CR, not all whitespace,
	since it breaks READ-LINE on terminals
	Reported by Peter Wood <peter.wood@worldonline.dk>

2002-02-11  Sam Steingold  <sds@gnu.org>

	ANSI CL 11.1.2.1.2 #9 forbids tracing in COMMON-LISP
	* trace.lisp (trace1, untrace1): forbid tracing in locked packages
	* init.lisp (check-redefinition): handle (SETF function-name)

2002-02-11  Sam Steingold  <sds@gnu.org>

	fixed the (compile nil (lambda () (flet (())))) bug
	* compiler.lisp (symbol-suffix): use just the suffix for NIL funname

2002-02-5  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp, affi1.lisp: moved *FOREIGN-ENCODING* to the
	CUSTOM package, as described in the impnotes

2002-02-09  Sam Steingold  <sds@gnu.org>

	* makemake.in: include impnotes.css in the distribution along
	with impnotes.html

2002-02-03  Sam Steingold  <sds@gnu.org>

	fixed a bug: (defmethod foo ((x (eql 1))) x)
	* package.d (CHECK-PACKAGE-LOCK): handle non-package third
	argument to mean "unlocked"
	* init.lisp (check-redefinition): (EQL X): when X is not a
	symbol, pass NIL as the package

2002-02-01  Sam Steingold  <sds@gnu.org>

	* spvw_update.d (update_weakpointer): new macro
	(update_weakpointers, update_weakpointers_mod): use it

2002-02-01  Sam Steingold  <sds@gnu.org>

	* io.d (pr_array_nil): print array address too
	(pr_hex6_obj): save the object
	(pr_orecord): print HASH-TABLE with TEST and COUNT
	even when *PRINT-ARRAY* is NIL
	* constobj.d (printstring_hash_table): removed

2002-01-31  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (hashtable_test): new macro
	* io.d (pr_orecord): use it
	* hashtable.d (HASH-TABLE-TEST): ditto

2002-01-31  Sam Steingold  <sds@gnu.org>

	* record.d (mk_weakpointer): new local helper function
	(allocate_weakpointer): new global function, uses mk_weakpointer()